--- a/src/App.scss
+++ b/src/App.scss
@@ -11,34 +11,26 @@
   height: 100vh;
 
   text-align: center;
-
-  position: relative;
-
-  .fundo {
-    position: fixed;
-    min-width: 100vw;
-    height: 100%;
-    z-index: -1;
-    background: none;
-    border: 0;
-    left: 0;
-    top: 0;
-  }
+  background: url("fundo.png") no-repeat center;
 
   .envelope {
-    width: 60%;
+    width: 50%;
     margin: 0 auto;
     background: none;
     border: 0;
-    margin-top: 9rem;
+    margin-top: calc(25vh);
 
     cursor: pointer;
-
-    position: relative;
-
     &:hover {
       filter: brightness(0.9);
-      animation: tada 20s;
+
+      @media only screen and (min-width: 1221px) {
+        animation: tada infinite;
+        animation-duration: 5s;
+      }
+    }
+    @media only screen and (max-width: 1220px) {
+      animation: tada infinite;
       animation-duration: 5s;
     }
 
@@ -51,9 +43,10 @@
       height: auto;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
       border: 4px solid rgba(118, 234, 255, 0.5);
-      border-radius: 5px;
+      border-radius: 25px;
       z-index: 1;
       transition: border 0.5s;
+      filter: saturate(3);
     }
 
     .desc {
@@ -64,14 +57,16 @@
       color: white;
       font-weight: bold;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
-      animation: shakeX infinite;
-      animation-duration: 5s;
+
+      @media only screen and (min-width: 1220px) {
+        animation: shakeX infinite;
+        animation-duration: 5s;
+      }
     }
   }
 }
 
 .container {
-
   animation: fadeIn;
   animation-duration: 2s;
 
@@ -241,7 +236,7 @@
   }
 }
 
-@media (max-width: 1220px) {
+@media only screen and (max-width: 1220px) {
   .container {
     max-width: 100vw;
     flex-direction: column;
@@ -254,25 +249,24 @@
   }
 }
 
-@media (max-width: 1080px) {
+@media only screen and (max-width: 1080px) {
   html {
     font-size: 93.75%;
   }
-}
-
-@media (max-width: 720px) {
-  html {
-    font-size: 87.5%;
-  }
-
   .container-intro {
     .envelope {
-      width: 90%;
+      width: 80%;
     }
   }
 }
 
-@media (max-width: 340px) {
+@media only screen and (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+@media only screen and (max-width: 340px) {
   .container {
     padding: 0.5rem;
 
@@ -298,7 +292,7 @@
 @media (max-height: 600px) {
   .container-intro {
     .envelope {
-      width: 70%;
+      width: 60%;
     }
   }
   .container-intro .envelope {
