--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
   height: 100vh;
 
   text-align: center;
-  background: url("/fundo.png") no-repeat center;
+  background: url('/fundo.png') no-repeat center;
 
   .envelope {
     width: 50%;
@@ -42,7 +42,7 @@
       width: 100%;
       height: auto;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-      border: 4px solid rgba(118, 234, 255, 0.5);
+      border: 4px solid rgba(255, 214, 118, 0.5);
       border-radius: 25px;
       z-index: 1;
       transition: border 0.5s;
@@ -90,7 +90,7 @@
     justify-items: center;
 
     img {
-      width: 99%;
+      width: 90%;
       height: auto;
 
       border: 3px solid white;
@@ -116,7 +116,7 @@
       text-transform: uppercase;
       font-size: 2.5rem;
       margin: 1.2rem;
-      color: #00aade;
+      color: #936e36;
       text-shadow: 2px 2px 2px rgba($color: #fff, $alpha: 0.5);
     }
 
@@ -135,7 +135,7 @@
 
       font-weight: bold;
 
-      background: rgb(255, 254, 211);
+      background: rgb(255, 249, 230);
 
       & + div {
         margin-top: 1.3rem;
@@ -145,7 +145,7 @@
         text-transform: uppercase;
         font-size: 1.7rem;
         margin: 1.5rem;
-        color: #c88b5c;
+        color: #c9ae69;
         //text-decoration: underline;
       }
 
@@ -178,7 +178,7 @@
         svg {
           width: 40px;
           height: 40px;
-          color: #00aade;
+          color: #deb900;
         }
 
         div {
@@ -209,7 +209,7 @@
     border: 1px solid lightgray;
     border-radius: 6px;
     box-shadow: 1px 2px 10px 0 rgb(0 0 0 / 20%);
-    color: #ff8c00;
+    color: #d3af83;
     cursor: pointer;
     display: flex;
     line-height: 24px;
@@ -227,7 +227,7 @@
     z-index: 1;
 
     &:hover {
-      color: #00aade;
+      color: #705b00;
     }
   }
 
