--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *,
 ::after,
-::before{
+::before {
   margin: 0;
   padding: 0;
   box-sizing: content-box;
@@ -17,8 +17,12 @@ body {
   width: 100vw;
   height: 100vh;
   min-height: 100vh;
-  background-color: rgb(33,255,240);
-  background: linear-gradient(180deg, rgba(33,255,240,1) 0%, rgba(10,176,247,1) 100%);
+  background-color: rgb(255, 249, 230);
+  background: linear-gradient(
+    180deg,
+    rgb(255, 243, 203) 0%,
+    rgb(157, 150, 80) 100%
+  );
   background-attachment: fixed;
   overflow-x: hidden;
 }
