--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
   animation-duration: 1s;
 }
 .container-intro {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   text-align: center;
@@ -90,7 +90,7 @@
     justify-items: center;
 
     img {
-      width: 95%;
+      width: 98%;
       height: auto;
 
       border: 3px solid white;
@@ -238,14 +238,13 @@
 
 @media only screen and (max-width: 1220px) {
   .container {
-    max-width: 100vw;
     flex-direction: column;
-    align-items: center;
-    padding-right: 1rem;
+    padding: 2rem;
+    margin: 0;
 
     article,
     aside {
-      flex: 1 1 100%;
+      width: 100%;
     }
   }
 }
@@ -255,8 +254,12 @@
     font-size: 93.75%;
   }
   .container-intro {
-    .envelope {
-      width: 80%;
+    .envelope img {
+      border-radius: 20px;
+    }
+
+    .envelope .desc {
+      font-size: 1.2rem;
     }
   }
 }
@@ -270,35 +273,8 @@
   }
 
   .container {
-    aside {
-      width: 90%;
-    }
-  }
-}
-
-@media only screen and (max-width: 340px) {
-  .container {
-    padding: 2rem;
-
-    article img {
-      width: 97%;
-    }
-
-    aside {
-      width: 100%;
-    }
-    aside .aside-content {
-      width: 90%;
-      margin: 0;
-      padding: 0;
-
-      .details {
-        flex-direction: column;
-      }
-    }
-
     aside h1 {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       margin-bottom: 3rem;
     }
 
@@ -315,6 +291,21 @@
 
     aside .aside-content {
       font-size: 0.7rem;
+    }
+
+    aside .aside-content .details svg {
+      width: 30px;
+      height: 30px;
+    }
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  .container {
+    aside .aside-content {
+      .details {
+        flex-direction: column;
+      }
     }
   }
 }
