--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,13 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  width: 100vw;
-  height: 100vh;
-  min-height: 100vh;
   background-color: rgb(255, 249, 230);
   background: linear-gradient(
     180deg,
@@ -25,6 +23,12 @@ body {
   );
   background-attachment: fixed;
   overflow-x: hidden;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
 
 code {
